renaming and reordering for presenting

--- a/0526_verdaq_sampling_hyp.ipynb
+++ b/0526_verdaq_sampling_hyp.ipynb
@@ -6,6 +6,10 @@
    "metadata": {},
    "source": [
     "# Sampling Hypothesis\n",
+    "In what format are data times taken?\n",
+    "How can we interpret an use this information?\n",
+    "This notebooks tests some ideas, hypothesis based on what I have seen on plots in order to confirmate the format of data.\n",
+    "\n",
     "## Batches Hypothesis\n",
     "This notebooks explores the hypothesis that each data is sampled in fixed intervals and send in batches to the main computer that did the time stamps.\n",
     "Given the sampling rate we can do a further analysis"
@@ -158,7 +162,9 @@
    "id": "60d43698",
    "metadata": {},
    "source": [
-    "## Data cleaning"
+    "## Data cleaning\n",
+    "- Drops NaNs\n",
+    "- Data format "
    ]
   },
   {
