readme with project orden

--- a/0530_verdaq_grouping.ipynb
+++ b/0530_verdaq_grouping.ipynb
@@ -5,7 +5,7 @@
    "id": "d8dca8e3",
    "metadata": {},
    "source": [
-    "# Cleaning Pipeline\n",
+    "# Cleaning Groups Pipeline\n",
     "La existencia de los triggers es problematica, significa que no tenemos datos continuos si no, una gran agrupación de estos separadas por tiempos grandes que si respetan los time stamps originales; mientras que lo datos que llegan dentro de un mismo grupo comparten time-stamps de manera no uniforme, por lo que debemos de asumir que se encuentran con el sampling fijo subyacente $\\delta t$, de acuerdo a scripts como runAnalysis indican que es del orden de $5 [ms]$, sin embargo no hay nada que me indique aquello en la documentación ni en conversaciones con Mauro.\n",
     "\n",
     "## De que trata esta pipeline?\n",
