--- a/0603_beam_data_view.ipynb
+++ b/0603_beam_data_view.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "id": "1fc07e1a",
    "metadata": {},
    "outputs": [
@@ -53,7 +53,7 @@
        " '..\\\\0_raw\\\\user_data_slot9_0525-3125\\\\Orlando_Soto_-_Slot_9\\\\RUN_8_USER_\\\\data_CHARMB_7.csv']"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 8,
    "id": "c83bcb74",
    "metadata": {},
    "outputs": [
@@ -83,7 +83,6 @@
      "output_type": "stream",
      "text": [
       "-------------------------------------------------------------\n",
-      "Cargando: ..\\0_raw\\user_data_jun\\USER_Orlando_Soto_-_Slot_10-11\\RUN_10_USER_\\data_CHARMB_7.csv  (run_group=run_1, 9997 filas)\n",
       "ERROR: TID no es monotónico en ..\\0_raw\\user_data_jun\\USER_Orlando_Soto_-_Slot_10-11\\RUN_10_USER_\\data_CHARMB_7.csv\n",
       "ERROR: N1MeV no es monotónico en ..\\0_raw\\user_data_jun\\USER_Orlando_Soto_-_Slot_10-11\\RUN_10_USER_\\data_CHARMB_7.csv\n"
      ]
@@ -102,8 +101,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Cargando: ..\\0_raw\\user_data_jun\\USER_Orlando_Soto_-_Slot_10-11\\RUN_10_USER_\\data_CHARMB_7.csv  (run_group=run_1, 9995 filas)\n",
       "-------------------------------------------------------------\n",
-      "Cargando: ..\\0_raw\\user_data_jun\\USER_Orlando_Soto_-_Slot_10-11\\RUN_10_USER_\\data_CHARMB_7_2.csv  (run_group=run_2, 9995 filas)\n",
       "ERROR: TID no es monotónico en ..\\0_raw\\user_data_jun\\USER_Orlando_Soto_-_Slot_10-11\\RUN_10_USER_\\data_CHARMB_7_2.csv\n",
       "ERROR: N1MeV no es monotónico en ..\\0_raw\\user_data_jun\\USER_Orlando_Soto_-_Slot_10-11\\RUN_10_USER_\\data_CHARMB_7_2.csv\n"
      ]
@@ -122,8 +121,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Cargando: ..\\0_raw\\user_data_jun\\USER_Orlando_Soto_-_Slot_10-11\\RUN_10_USER_\\data_CHARMB_7_2.csv  (run_group=run_2, 9997 filas)\n",
       "-------------------------------------------------------------\n",
-      "Cargando: ..\\0_raw\\user_data_jun\\USER_Orlando_Soto_-_Slot_10-11\\RUN_9_USER_\\data_CHARMB_7.csv  (run_group=run_3, 9997 filas)\n",
       "ERROR: TID no es monotónico en ..\\0_raw\\user_data_jun\\USER_Orlando_Soto_-_Slot_10-11\\RUN_9_USER_\\data_CHARMB_7.csv\n",
       "ERROR: N1MeV no es monotónico en ..\\0_raw\\user_data_jun\\USER_Orlando_Soto_-_Slot_10-11\\RUN_9_USER_\\data_CHARMB_7.csv\n"
      ]
@@ -142,8 +141,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-------------------------------------------------------------\n",
-      "Cargando: ..\\0_raw\\user_data_nov\\USER_CAEN_S_Paoletti_slot33_R10_\\RUN_data\\data_CHARMB_MULTIPLE.csv  (run_group=run_4, 9997 filas)\n"
+      "Cargando: ..\\0_raw\\user_data_jun\\USER_Orlando_Soto_-_Slot_10-11\\RUN_9_USER_\\data_CHARMB_7.csv  (run_group=run_3, 9997 filas)\n",
+      "-------------------------------------------------------------\n"
      ]
     },
     {
@@ -160,8 +159,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-------------------------------------------------------------\n",
-      "Cargando: ..\\0_raw\\user_data_sep\\USER_Orlando_Soto_-_Victor_Quintana_-_TGC-_Charge_Monitoring_System_-_Slot_25\\RUN_24_USER_\\data_CHARMB_7.csv  (run_group=run_5, 9997 filas)\n"
+      "Cargando: ..\\0_raw\\user_data_nov\\USER_CAEN_S_Paoletti_slot33_R10_\\RUN_data\\data_CHARMB_MULTIPLE.csv  (run_group=run_4, 9997 filas)\n",
+      "-------------------------------------------------------------\n"
      ]
     },
     {
@@ -178,8 +177,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Cargando: ..\\0_raw\\user_data_sep\\USER_Orlando_Soto_-_Victor_Quintana_-_TGC-_Charge_Monitoring_System_-_Slot_25\\RUN_24_USER_\\data_CHARMB_7.csv  (run_group=run_5, 9999 filas)\n",
       "-------------------------------------------------------------\n",
-      "Cargando: ..\\0_raw\\user_data_slot10_0601-0607\\USER_Orlando_Soto_-_Slot_10\\RUN_9_USER_\\data_CHARMB_7.csv  (run_group=run_6, 9999 filas)\n",
       "ERROR: TID no es monotónico en ..\\0_raw\\user_data_slot10_0601-0607\\USER_Orlando_Soto_-_Slot_10\\RUN_9_USER_\\data_CHARMB_7.csv\n",
       "ERROR: N1MeV no es monotónico en ..\\0_raw\\user_data_slot10_0601-0607\\USER_Orlando_Soto_-_Slot_10\\RUN_9_USER_\\data_CHARMB_7.csv\n"
      ]
@@ -198,8 +197,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Cargando: ..\\0_raw\\user_data_slot10_0601-0607\\USER_Orlando_Soto_-_Slot_10\\RUN_9_USER_\\data_CHARMB_7.csv  (run_group=run_6, 9997 filas)\n",
       "-------------------------------------------------------------\n",
-      "Cargando: ..\\0_raw\\user_data_slot9_0525-3125\\Orlando_Soto_-_Slot_9\\RUN_8_USER_\\data_CHARMB_7.csv  (run_group=run_7, 9997 filas)\n",
       "ERROR: TID no es monotónico en ..\\0_raw\\user_data_slot9_0525-3125\\Orlando_Soto_-_Slot_9\\RUN_8_USER_\\data_CHARMB_7.csv\n",
       "ERROR: N1MeV no es monotónico en ..\\0_raw\\user_data_slot9_0525-3125\\Orlando_Soto_-_Slot_9\\RUN_8_USER_\\data_CHARMB_7.csv\n"
      ]
@@ -218,9 +217,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Cargando: ..\\0_raw\\user_data_slot9_0525-3125\\Orlando_Soto_-_Slot_9\\RUN_8_USER_\\data_CHARMB_7.csv  (run_group=run_7, 9997 filas)\n",
       "#========================= Comprobación de time stamps espaciados ===========================#\n",
       "\n",
-      "=== Run 1 (run_1) ===\n",
+      "=== Run 1 (1) ===\n",
       "Duplicados en Time: 0\n",
       "\n",
       "Intervalos entre lecturas (segundos) — estadísticos:\n",
@@ -240,7 +240,7 @@
       "\n",
       "No se detectaron saltos significativos (gaps > median + 5·IQR).\n",
       "\n",
-      "=== Run 2 (run_2) ===\n",
+      "=== Run 2 (2) ===\n",
       "Duplicados en Time: 0\n",
       "\n",
       "Intervalos entre lecturas (segundos) — estadísticos:\n",
@@ -260,7 +260,7 @@
       "\n",
       "No se detectaron saltos significativos (gaps > median + 5·IQR).\n",
       "\n",
-      "=== Run 3 (run_3) ===\n",
+      "=== Run 3 (3) ===\n",
       "Duplicados en Time: 0\n",
       "\n",
       "Intervalos entre lecturas (segundos) — estadísticos:\n",
@@ -292,7 +292,7 @@
       "---> Gap en 6697 → intervalo = 49.30 s\n",
       "---> Gap en 6692 → intervalo = 49.30 s\n",
       "\n",
-      "=== Run 4 (run_4) ===\n",
+      "=== Run 4 (4) ===\n",
       "Duplicados en Time: 0\n",
       "\n",
       "Intervalos entre lecturas (segundos) — estadísticos:\n",
@@ -312,7 +312,7 @@
       "\n",
       "No se detectaron saltos significativos (gaps > median + 5·IQR).\n",
       "\n",
-      "=== Run 5 (run_5) ===\n",
+      "=== Run 5 (5) ===\n",
       "Duplicados en Time: 0\n",
       "\n",
       "Intervalos entre lecturas (segundos) — estadísticos:\n",
@@ -344,7 +344,7 @@
       "---> Gap en 6652 → intervalo = 55.09 s\n",
       "---> Gap en 6655 → intervalo = 55.09 s\n",
       "\n",
-      "=== Run 6 (run_6) ===\n",
+      "=== Run 6 (6) ===\n",
       "Duplicados en Time: 0\n",
       "\n",
       "Intervalos entre lecturas (segundos) — estadísticos:\n",
@@ -376,7 +376,7 @@
       "---> Gap en 6697 → intervalo = 49.30 s\n",
       "---> Gap en 6692 → intervalo = 49.30 s\n",
       "\n",
-      "=== Run 7 (run_7) ===\n",
+      "=== Run 7 (7) ===\n",
       "Duplicados en Time: 0\n",
       "\n",
       "Intervalos entre lecturas (segundos) — estadísticos:\n",
@@ -405,29 +405,19 @@
       "2022-05-25 10:12:25.793379328  488.033527  1.060544e+12  5.843457e+12   \n",
       "2022-05-25 10:13:16.552055040  488.017482  1.060544e+12  5.844933e+12   \n",
       "\n",
-      "                              run_group  \n",
-      "Time                                     \n",
-      "2022-05-25 10:09:53.517351680     run_7  \n",
-      "2022-05-25 10:10:44.276027648     run_7  \n",
-      "2022-05-25 10:11:35.034703616     run_7  \n",
-      "2022-05-25 10:12:25.793379328     run_7  \n",
-      "2022-05-25 10:13:16.552055040     run_7  \n",
-      "                                     TID           HEH         N1MeV run_group\n",
-      "Time                                                                          \n",
-      "2022-06-10 13:00:48.162616320  10.816681  2.530684e+10  1.352452e+11     run_1\n",
-      "2022-06-10 13:01:03.775077632  10.846589  2.531291e+10  1.353905e+11     run_1\n",
-      "2022-06-10 13:01:19.387538688  10.836641  2.531320e+10  1.357699e+11     run_1 ...  <-- últimas filas de run_1\n",
-      "                                      TID           HEH         N1MeV  \\\n",
-      "Time                                                                    \n",
-      "2022-05-25 10:09:53.517351680  488.022822  1.060544e+12  5.839896e+12   \n",
-      "2022-05-25 10:10:44.276027648  488.027711  1.060544e+12  5.841454e+12   \n",
-      "2022-05-25 10:11:35.034703616  488.025729  1.060544e+12  5.842470e+12   \n",
-      "\n",
-      "                              run_group  \n",
-      "Time                                     \n",
-      "2022-05-25 10:09:53.517351680     run_7  \n",
-      "2022-05-25 10:10:44.276027648     run_7  \n",
-      "2022-05-25 10:11:35.034703616     run_7   ...  <-- primeras filas de último run\n",
+      "                               run_group  \n",
+      "Time                                      \n",
+      "2022-05-25 10:09:53.517351680          7  \n",
+      "2022-05-25 10:10:44.276027648          7  \n",
+      "2022-05-25 10:11:35.034703616          7  \n",
+      "2022-05-25 10:12:25.793379328          7  \n",
+      "2022-05-25 10:13:16.552055040          7  \n",
+      "Empty DataFrame\n",
+      "Columns: [TID, HEH, N1MeV, run_group]\n",
+      "Index: [] ...  <-- últimas filas de run_1\n",
+      "Empty DataFrame\n",
+      "Columns: [TID, HEH, N1MeV, run_group]\n",
+      "Index: [] ...  <-- primeras filas de último run\n",
       "\n",
       "Total de filas en df_beam: 69979\n"
      ]
@@ -453,7 +443,7 @@
     "    df_run = df_run[[\"Time\", \"TID\", \"HEH\", \"N1MeV\"]].sort_values(\"Time\").reset_index(drop=True)\n",
     "\n",
     "    # 2) Asignar identificador de run\n",
-    "    df_run[\"run_group\"] = f\"run_{run_id}\"\n",
+    "    df_run[\"run_group\"] = int(run_id)\n",
     "\n",
     "    # 3) Verificar monotonía sin interrumpir la ejecución\n",
     "    if not df_run[\"TID\"].is_monotonic_increasing:\n",
@@ -510,8 +500,8 @@
     "\n",
     "    # codigo temporal, importando todo:\n",
     "    print(\"-------------------------------------------------------------\")\n",
-    "    print(f\"Cargando: {path}  (run_group=run_{idx}, {len(df_run)} filas)\")\n",
     "    df_run = load_and_check_run(path, idx, plot=plot_variables)\n",
+    "    print(f\"Cargando: {path}  (run_group=run_{idx}, {len(df_run)} filas)\")\n",
     "    dfs_runs.append(df_run)\n",
     " \n",
     "print(\"#========================= Comprobación de time stamps espaciados ===========================#\")\n",
@@ -592,17 +582,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 12,
    "id": "a1bb3728",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'run_1', 'run_2', 'run_3', 'run_4', 'run_5', 'run_6', 'run_7'}"
+       "{1, 2, 3, 4, 5, 6, 7}"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -614,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 10,
    "id": "5edc7206",
    "metadata": {},
    "outputs": [
@@ -639,7 +629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 11,
    "id": "648b3ad0",
    "metadata": {},
    "outputs": [],
@@ -664,7 +654,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.8.0"
   }
  },
  "nbformat": 4,
