dosis y time until failure

--- a/0603_beam_data_view.ipynb
+++ b/0603_beam_data_view.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "id": "1fc07e1a",
    "metadata": {},
    "outputs": [
@@ -53,7 +53,7 @@
        " '..\\\\0_raw\\\\user_data_slot9_0525-3125\\\\Orlando_Soto_-_Slot_9\\\\RUN_8_USER_\\\\data_CHARMB_7.csv']"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "id": "c83bcb74",
    "metadata": {},
    "outputs": [
@@ -582,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "id": "a1bb3728",
    "metadata": {},
    "outputs": [
@@ -592,7 +592,7 @@
        "{1, 2, 3, 4, 5, 6, 7}"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -604,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "id": "5edc7206",
    "metadata": {},
    "outputs": [
@@ -629,7 +629,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
+   "id": "36670c31",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>TID</th>\n",
+       "      <th>HEH</th>\n",
+       "      <th>N1MeV</th>\n",
+       "      <th>run_group</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>TID</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.999435</td>\n",
+       "      <td>0.997485</td>\n",
+       "      <td>0.977560</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>HEH</th>\n",
+       "      <td>0.999435</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.999202</td>\n",
+       "      <td>0.978291</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>N1MeV</th>\n",
+       "      <td>0.997485</td>\n",
+       "      <td>0.999202</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.976093</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>run_group</th>\n",
+       "      <td>0.977560</td>\n",
+       "      <td>0.978291</td>\n",
+       "      <td>0.976093</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                TID       HEH     N1MeV  run_group\n",
+       "TID        1.000000  0.999435  0.997485   0.977560\n",
+       "HEH        0.999435  1.000000  0.999202   0.978291\n",
+       "N1MeV      0.997485  0.999202  1.000000   0.976093\n",
+       "run_group  0.977560  0.978291  0.976093   1.000000"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# existen altas correlaciones dentro de los datos\n",
+    "df_beam.corr()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "id": "648b3ad0",
    "metadata": {},
    "outputs": [],
@@ -654,7 +738,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
