organizaicon de datos

--- a/0602_dmm_current.ipynb
+++ b/0602_dmm_current.ipynb
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "4f04a60e",
    "metadata": {},
    "outputs": [
@@ -259,7 +259,7 @@
     "\n",
     "ax2 = ax1.twinx()\n",
     "ax2.plot(df.index, df[\"IAC\"] * 1e6, color=\"tab:orange\", linestyle=\"--\", label=\"IAC [µA]\", alpha=0.6)\n",
-    "ax2.set_ylabel(\"IAC RMS [µA]\", color=\"tab:orange\")\n",
+    "ax2.set_ylabel(\"IAC [µA]\", color=\"tab:orange\")\n",
     "ax2.tick_params(axis=\"y\", labelcolor=\"tab:orange\")\n",
     "\n",
     "fig.tight_layout()\n",
