Migrate poisson binning utilities to radbin

--- a/0804_PIPE_cpld_beam.ipynb
+++ b/0804_PIPE_cpld_beam.ipynb
@@ -1208,7 +1208,8 @@
    ],
    "source": [
     "import pandas as pd\n",
-    "from lib.poisson_binning import recommend_k_multiple, bin_and_rate, fit_poisson_trend\n",
+    "from radbin.core import recommend_k_multiple, build_and_summarize\n",
+    "from radbin.glm import poisson_trend_test_plus\n",
     "\n",
     "# Given your shapes / columns:\n",
     "# df_beam2, fails_run2; df_beam3, fails_run3\n",
@@ -1216,45 +1217,43 @@
     "\n",
     "# 0) Pick a debounce (seconds) to avoid counting a continuous fault storm many times\n",
     "MIN_SEP = 0.5  # example, tune with your sampling/engineering knowledge\n",
-    "TARGET_EVENTS = 8  # aim 5–15 events/bin\n",
+    "TARGET_EVENTS = 8  # aim 5\u201315 events/bin\n",
     "\n",
     "# 1) Choose k (how many reset-intervals per bin)\n",
     "k2 = recommend_k_multiple(fails_run2, target_events_per_bin=TARGET_EVENTS, min_separation=MIN_SEP)\n",
     "k3 = recommend_k_multiple(fails_run3, target_events_per_bin=TARGET_EVENTS, min_separation=MIN_SEP)\n",
     "\n",
-    "# 2) Build bins, aggregate exposure, and estimate rates (per subsystem)\n",
-    "bins2 = bin_and_rate(\n",
+    "# 2) Build bins, aggregate exposure, and estimate rates\n",
+    "bins2 = build_and_summarize(\n",
     "    df_beam2, fails_run2,\n",
-    "    n_subsystems=32,\n",
-    "    flux_col='N1MeV_dose_rate',   # SEE proxy\n",
+    "    bin_mode=\"reset\",\n",
     "    k_multiple=k2,\n",
-    "    min_separation=MIN_SEP\n",
+    "    flux_col=\"N1MeV_dose_rate\",   # SEE proxy\n",
+    "    T_source=\"beam\",\n",
     ")\n",
     "\n",
-    "bins3 = bin_and_rate(\n",
+    "bins3 = build_and_summarize(\n",
     "    df_beam3, fails_run3,\n",
-    "    n_subsystems=16,\n",
-    "    flux_col='N1MeV_dose_rate',\n",
+    "    bin_mode=\"reset\",\n",
     "    k_multiple=k3,\n",
-    "    min_separation=MIN_SEP\n",
+    "    flux_col=\"N1MeV_dose_rate\",\n",
+    "    T_source=\"beam\",\n",
     ")\n",
     "\n",
-    "# bins*.columns include:\n",
-    "# ['t_start','t_end','t_mid','k','time_exposure','eq_time_exposure',\n",
-    "#  'time_exp_per_sub','eq_time_exp_per_sub',\n",
-    "#  'lam_time','lam_time_lo','lam_time_hi','lam_eq','lam_eq_lo','lam_eq_hi',\n",
-    "#  'se_time','se_eq','rel_time','rel_eq']\n",
+    "# bins*.columns include radbin summaries such as:\n",
+    "# ['t_start','t_end','t_mid','width_s','N','T','rate','lo','hi', ...]\n",
+    "# Divide `rate` by the number of subsystems if you need per-subsystem values.\n",
     "\n",
     "# 3) Is the rate changing over time? (trend test; eq-time recommended)\n",
-    "trend2 = fit_poisson_trend(bins2, use_eq_time=True)\n",
-    "trend3 = fit_poisson_trend(bins3, use_eq_time=True)\n",
+    "trend2 = poisson_trend_test_plus(bins2)\n",
+    "trend3 = poisson_trend_test_plus(bins3)\n",
     "\n",
-    "print(\"Run2 trend p-value:\", trend2.p_value, \"converged:\", trend2.converged, \"bins:\", trend2.n_bins)\n",
-    "print(\"Run3 trend p-value:\", trend3.p_value, \"converged:\", trend3.converged, \"bins:\", trend3.n_bins)\n",
+    "print(\"Run2 trend Wald p-value:\", trend2[\"wald_p_two_sided\"], \"bins:\", trend2.get(\"n_bins\"))\n",
+    "print(\"Run3 trend Wald p-value:\", trend3[\"wald_p_two_sided\"], \"bins:\", trend3.get(\"n_bins\"))\n",
     "\n",
     "# Interpretation:\n",
-    "#   p > 0.05 → no significant slope → rate ~ constant (useful life)\n",
-    "#   p <= 0.05 → significant slope → aging (early/late-life tail)\n"
+    "#   p > 0.05 \u2192 no significant slope \u2192 rate ~ constant (useful life)\n",
+    "#   p <= 0.05 \u2192 significant slope \u2192 aging (early/late-life tail)\n"
    ]
   },
   {
