--- a/1203_radbin_cpld.ipynb
+++ b/1203_radbin_cpld.ipynb
@@ -76,7 +76,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 2,
+            "execution_count": null,
             "id": "cfdc24a3",
             "metadata": {},
             "outputs": [
@@ -285,6 +285,15 @@
                     "execution_count": 2,
                     "metadata": {},
                     "output_type": "execute_result"
+                },
+                {
+                    "ename": "",
+                    "evalue": "",
+                    "output_type": "error",
+                    "traceback": [
+                        "\u001b[1;31mnotebook controller is DISPOSED. \n",
+                        "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+                    ]
                 }
             ],
             "source": [
@@ -313,7 +322,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 3,
+            "execution_count": null,
             "id": "c1776ce3",
             "metadata": {},
             "outputs": [
@@ -331,6 +340,15 @@
                     "execution_count": 3,
                     "metadata": {},
                     "output_type": "execute_result"
+                },
+                {
+                    "ename": "",
+                    "evalue": "",
+                    "output_type": "error",
+                    "traceback": [
+                        "\u001b[1;31mnotebook controller is DISPOSED. \n",
+                        "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+                    ]
                 }
             ],
             "source": [
@@ -340,7 +358,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 4,
+            "execution_count": null,
             "id": "88583062",
             "metadata": {},
             "outputs": [
@@ -358,6 +376,15 @@
                     "execution_count": 4,
                     "metadata": {},
                     "output_type": "execute_result"
+                },
+                {
+                    "ename": "",
+                    "evalue": "",
+                    "output_type": "error",
+                    "traceback": [
+                        "\u001b[1;31mnotebook controller is DISPOSED. \n",
+                        "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+                    ]
                 }
             ],
             "source": [
@@ -376,10 +403,20 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 5,
+            "execution_count": null,
             "id": "7b6709bf",
             "metadata": {},
-            "outputs": [],
+            "outputs": [
+                {
+                    "ename": "",
+                    "evalue": "",
+                    "output_type": "error",
+                    "traceback": [
+                        "\u001b[1;31mnotebook controller is DISPOSED. \n",
+                        "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+                    ]
+                }
+            ],
             "source": [
                 "df_latchup_2 = pd.read_csv(\"./1_data/df_latchup_2.csv\")\n",
                 "df_latchup_3 = pd.read_csv(\"./1_data/df_latchup_3.csv\")\n"
@@ -387,7 +424,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 6,
+            "execution_count": null,
             "id": "8ee704fa",
             "metadata": {},
             "outputs": [
@@ -407,6 +444,15 @@
                     },
                     "metadata": {},
                     "output_type": "display_data"
+                },
+                {
+                    "ename": "",
+                    "evalue": "",
+                    "output_type": "error",
+                    "traceback": [
+                        "\u001b[1;31mnotebook controller is DISPOSED. \n",
+                        "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+                    ]
                 }
             ],
             "source": [
@@ -523,7 +569,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 7,
+            "execution_count": null,
             "id": "bd7f9a43",
             "metadata": {},
             "outputs": [
@@ -557,6 +603,15 @@
                         "2              0.0        -0.0  3.100255e+08   -0.0       -0.0\n",
                         "3              0.0        -0.0  3.120322e+08   -0.0       -0.0\n",
                         "4              0.0        -0.0  3.182332e+08   -0.0       -0.0\n"
+                    ]
+                },
+                {
+                    "ename": "",
+                    "evalue": "",
+                    "output_type": "error",
+                    "traceback": [
+                        "\u001b[1;31mnotebook controller is DISPOSED. \n",
+                        "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
                     ]
                 }
             ],
@@ -751,7 +806,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 8,
+            "execution_count": null,
             "id": "921b56bf",
             "metadata": {},
             "outputs": [
@@ -764,6 +819,15 @@
                     },
                     "metadata": {},
                     "output_type": "display_data"
+                },
+                {
+                    "ename": "",
+                    "evalue": "",
+                    "output_type": "error",
+                    "traceback": [
+                        "\u001b[1;31mnotebook controller is DISPOSED. \n",
+                        "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+                    ]
                 }
             ],
             "source": [
@@ -823,7 +887,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 9,
+            "execution_count": null,
             "id": "5efe30d5",
             "metadata": {},
             "outputs": [
@@ -847,6 +911,15 @@
                         "Std Dev         | 2.72e-07        | 1.38e-07        | Dispersión / Ruido\n",
                         "Skewness        | 7.87           | 1.71           | 0 = Simétrico (Gauss)\n",
                         "Kurtosis        | 89.09           | 10.23           | 0 = Colas Normales\n"
+                    ]
+                },
+                {
+                    "ename": "",
+                    "evalue": "",
+                    "output_type": "error",
+                    "traceback": [
+                        "\u001b[1;31mnotebook controller is DISPOSED. \n",
+                        "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
                     ]
                 }
             ],
@@ -931,7 +1004,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 10,
+            "execution_count": null,
             "id": "f774cce5",
             "metadata": {},
             "outputs": [
@@ -997,6 +1070,15 @@
                     },
                     "metadata": {},
                     "output_type": "display_data"
+                },
+                {
+                    "ename": "",
+                    "evalue": "",
+                    "output_type": "error",
+                    "traceback": [
+                        "\u001b[1;31mnotebook controller is DISPOSED. \n",
+                        "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+                    ]
                 }
             ],
             "source": [
@@ -1118,7 +1200,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 11,
+            "execution_count": null,
             "id": "aa0f01cf",
             "metadata": {},
             "outputs": [
@@ -1152,6 +1234,15 @@
                         "Median          | 2.15e-07        | 2.00e-08        | -90.7%\n",
                         "Std Dev         | 1.37e-07        | 1.27e-07        | -\n",
                         "Points (N)      | 949             | 1483            | -\n"
+                    ]
+                },
+                {
+                    "ename": "",
+                    "evalue": "",
+                    "output_type": "error",
+                    "traceback": [
+                        "\u001b[1;31mnotebook controller is DISPOSED. \n",
+                        "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
                     ]
                 }
             ],
@@ -1235,6 +1326,7 @@
                 "    plt.plot(x_fit, norm.pdf(x_fit, mu3, std3), color='#ff7f0e', linestyle='--', linewidth=2)\n",
                 "    \n",
                 "    # Formatting\n",
+                "    plt.xscale('log')\n",
                 "    plt.xlabel(r'SEU Cross Section $\\sigma$ [cm$^2$]')\n",
                 "    plt.ylabel('Probability Density')\n",
                 "    plt.title('Distribution of $\\sigma$ (Clean Data): Run 2 vs Run 3')\n",
@@ -1264,7 +1356,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 12,
+            "execution_count": null,
             "id": "5d290dff",
             "metadata": {},
             "outputs": [
@@ -1295,6 +1387,15 @@
                     },
                     "metadata": {},
                     "output_type": "display_data"
+                },
+                {
+                    "ename": "",
+                    "evalue": "",
+                    "output_type": "error",
+                    "traceback": [
+                        "\u001b[1;31mnotebook controller is DISPOSED. \n",
+                        "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+                    ]
                 }
             ],
             "source": [
@@ -1388,7 +1489,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 13,
+            "execution_count": null,
             "id": "4a157498",
             "metadata": {},
             "outputs": [
@@ -1412,6 +1513,15 @@
                     },
                     "metadata": {},
                     "output_type": "display_data"
+                },
+                {
+                    "ename": "",
+                    "evalue": "",
+                    "output_type": "error",
+                    "traceback": [
+                        "\u001b[1;31mnotebook controller is DISPOSED. \n",
+                        "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+                    ]
                 }
             ],
             "source": [
